# python-nuxt-template

./: README.md  update_schemas.py
backend/: .gitignore  database.db-journal  pylama.ini  pyproject.toml
backend/backend/: __init__.py  app.py
backend/backend/controllers/: __init__.py  config.py  file.py  post.py  tag.py  user.py
backend/backend/utils/: prisma_utils.py  route_utils.py
frontend/: .eslintrc.js  .gitignore  app.vue  common.ts  nuxt.config.ts  package.json  windi.config.js
frontend/components/: Card.vue
frontend/components/model/: Post.vue  User.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/server/api/: file.post.ts
prisma/: backend.prisma  frontend.prisma  schema.prisma
