[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nils Olsson <nilso@enosis.net>"]

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.6.5"
starlite = "^1.3.3"
uvicorn = "^0.17.6"
openapi-schema-pydantic = "^1.2.2"

[tool.poetry.dev-dependencies]
pylama = "^8.3.8"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length=100

[tool.isort]
profile = "black"
multi_line_output = 3  # 3/5: less/more compact

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedVariable = false
